force-app/main/default/objects/RD_Change_Event_Log__c/RD_Change_Event_Log__c.object-meta.xml
<CustomObject>
    <description>Log the RD Change Events for debugging</description>
    <label>RD Change Event Log</label>
    <nameField>
        <displayFormat>EVT - {00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RD Change Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>