force-app/main/default/objects/RD_Change_Event_Log__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>