force-app/main/default/objects/RD_Change_Event_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>